# catjson

./: pyproject.toml
.github/workflows/: release.yml  shiv-artifacts.yml
src/catjson/: console.py
tests/: test.json
