[tool.poetry]
name = "catjson"
version = "0.1.0"
description = "cat json files"
authors = ["Jordi Funollet <funollet@fastmail.fm>"]
license = "GNU"

[tool.poetry.scripts]
catjson = "catjson.console:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
ujson = "^4.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pip = "^21.1.2"
wheel = "^0.36.2"
setuptools = "^57.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
